@@ -6,6 +6,11 @@ begin protocol specification
 	all string "*"
 	plug count 8
 	device timeout 5.0
+#	ping period 10.0
+	begin PING_SCRIPT
+		send "\r\n"
+		expect "vpc> "
+	end PING_SCRIPT
 	begin LOGIN_SCRIPT
 		send "login\r\n"
 		expect "[0-9]* OK"
