@@ -169,7 +169,7 @@ static List line_ptrs;
 begin[ \t]+global                 {   return TOK_B_GLOBAL; }
 TCP[ \t]+wrappers                 {   return TOK_TCP_WRAPPERS; }
 device[ \t]+timeout               {   return TOK_DEV_TIMEOUT; }
-log[ \t]+file                     {   return TOK_LOG_FILE; }
+ping[ \t]+period                  {   return TOK_PING_PERIOD; }
 client[ \t]+listener[ \t]+port    {   return TOK_CLIENT_PORT; }
 begin[ \t]+protocol[ \t]+specification {   return TOK_B_SPEC; }
 specification[ \t]+name           {   return TOK_SPEC_NAME; }
